# zserio-experiments

./: CMakeLists.txt  LICENSE  README.md
apps/packedarray/: CMakeLists.txt  RolledArray.h  main.cpp
apps/packedarray/zs/: packedarray.zs
